--- a/.github/workflows/exercise4.yml
+++ b/.github/workflows/exercise4.yml
@@ -35,7 +35,7 @@ jobs:
   needs: build
   environment:
    name: production
-   url: http://< replace-with-your-surge-url>.surge.sh
+   url: http://small-crow.surge.sh
   steps:
    - name: Download the Build Artifact
      uses: actions/download-artifact@v4.1.2
