--- a/.github/workflows/exercise4.yml
+++ b/.github/workflows/exercise4.yml
@@ -42,7 +42,7 @@ jobs:
      with:
       name: build
    - name: deploy to surge
-     run: npx surge --project ‘.’ --domain < replace-with-your-surge-url>.surge.sh
+     run: npx surge --project ‘.’ --domain < small-crow.surge.sh
      env:
       SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
       SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
